--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -53,6 +53,7 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
     <TextView
+        android:id="@+id/phoneNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="13143107298"
